# vulnerable-rust-app

./: Cargo.toml  README.md  sonar-project.properties
src/: main.rs
