[package]
name = "vuln_lab"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
rand = "0.8"
md5 = "0.7"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
cookie = "0.16"
